<resources>
    <string name="app_name">Splash</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signupinfo">For details Contact Us here</string>
    <string name="termsandcondition">Privacy Policy</string>
    <string name="bottledeliveredlabel">Bottle Delivered</string>
    <string name="delivery">Delivery</string>
    <string name="requested">Requested</string>
    <string name="client_header">Clients</string>
    <string name="clientname_label">Client :</string>
    <string name="clientcontact_label">Contact :</string>
    <string name="clientaddress_label">Address :</string>
    <string name="clientbottles_label">Bottles Delivered:</string>
    <string name="clientbottlesRec_label">Bottles Holding:</string>
    <string name="clientbottlerate_label">Rate :</string>
    <string name="clientlastdel_label">Last Delivery :</string>
    <string name="clientdaysdel_label">Days/Delivery:</string>
    <string name="rcv_payment">Recieve Payment</string>
    <string name="disable">Disable</string>
    <string name="addclient_header">Add Client</string>
    <string name="name_label">Name</string>
    <string name="contact_label">Contact no</string>
    <string name="address_label">Address</string>
    <string name="daysperdel_label">Days/Delivery</string>
    <string name="rate_label">Rate</string>
    <string name="deposit_label">Deposit</string>
    <string name="lastdel_label">Last Delivery</string>
    <string name="payments">Payments</string>
    <string name="Pending">Pending</string>
    <string name="payment_header">Payments</string>
    <string name="paymentbottle_label">bottles</string>
    <string name="paymentrcv">payment</string>
    <string name="Earnings">Earnings</string>
    <string name="clientTotalPaid">Paid</string>
    <string name="clientTotalBalance">Total Balance</string>
    <string name="orders">Orders</string>
    <string name="bottlereclabel">Bottles Recieved</string>
    <string name="Date">Date</string>
    <string name="cancel">Cancel</string>
    <string name="switclLabel">New / Old Customer</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="oncall">On call ?</string>
    <string name="bottlesrequired">Bottles Required</string>
    <string name="lastbottledel_label">Last Bottle Delivered</string>
    <string name="lastbottlerec_label">Last bottles received</string>
    <string name="lastpayment_label">Last Payment Recieved</string>
    <string name="deliveries">Deliveries</string>
    <string name="enable">Enable</string>
    <string name="editclient">Edit</string>
    <string name="allclient">All Clients</string>
    <string name="summary">Summary</string>
    <string name="summary_header">Summary</string>
    <string name="selectdate">Select Date</string>
    <string name="totalhouses">Total House</string>
    <string name="totalrevenue">Revenues</string>
    <string name="totalpaid">Total Paid</string>
    <string name="oncallvd">On Call</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Name, Address</string>
    <string name="update">Update</string>
    <string name="disable_client_header">Disabled Clients</string>
    <string name="logout">Logout</string>
    <string name="contactustext">Splash is one of its kind app and very easy to use to keep record of all your water supply\nFeature include :-\n- Customer Management\n- Delivery Management\n- Sms on Deliveries\n- Daily Summary\n- Daily Deliveries\n- Payments Management\n\n500/rs is the registration fees , account opening and 2 months free for new accounts. after two months 40/rs per user will be charged for any queries you can call on 03248262087</string>
    <string name="olddeliveries">Old Deliveries</string>
    <string name="amount">Amount</string>
    <string name="remarks">Remarks</string>
    <string name="save">Save</string>
    <string name="finance">Finance</string>
    <string name="activeClients">Active Clients</string>
    <string name="Comingsoon">Coming Soon</string>
    <string name="summarymonth">Summary for the month of :</string>
    <string name="sendsms">Send Sms</string>
    <string name="MonthlyIncome">Monthly Income</string>
    <string name="MonthlyExpense">Monthly Expense</string>
    <string name="MonthlyTotal">Monthly Total</string>
    <string name="lastmonth_bill">Last Month Bill:</string>
</resources>
