<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:text="Finance"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switchbtn"
            android:layout_gravity="center"
            android:text="Income / Expense"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/divider_margin"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:layout_weight="1"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/amount"
                android:layout_weight="1"
                android:inputType="number"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/divider_margin"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/remarks"
                android:layout_weight="1"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/remarks" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/divider_margin"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Date"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/selectdate"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:id="@+id/findate"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >


            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:background="@color/red"
                android:paddingLeft="@dimen/buttonpad"
                android:paddingRight="@dimen/buttonpad"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_margin="@dimen/margin_appname_tb"
                android:textColor="@color/white"
                />


            <TextView
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:background="@color/colorPrimaryLight"
                android:paddingLeft="@dimen/buttonpad"
                android:paddingRight="@dimen/buttonpad"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_margin="@dimen/margin_appname_tb"
                android:textColor="@color/white"
                />



            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>