<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textSize="29dp"
            android:text=""
            android:id="@+id/nametag"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            android:id="@+id/progressbar"/>


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="@dimen/labeltext"
            android:text="@string/bottledeliveredlabel" />


        <EditText
            android:id="@+id/deliverbottle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
           android:layout_weight="1"
            android:inputType="numberSigned"
            android:text="0" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="@dimen/labeltext"
            android:text="@string/bottlereclabel" />


        <EditText
            android:id="@+id/recievebottle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberSigned"
            android:text="0" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="@dimen/labeltext"
            android:text="@string/paymentrcv" />


        <EditText
            android:id="@+id/receivepayment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberSigned"
            android:text="0" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="@dimen/labeltext"
            android:text="@string/Date" />


        <TextView
            android:id="@+id/deliverydate"
            android:layout_width="0dp"

            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >


        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@color/red"
            android:paddingLeft="@dimen/buttonpad"
            android:paddingRight="@dimen/buttonpad"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_margin="@dimen/margin_appname_tb"
            android:textColor="@color/white"
            />


        <TextView
            android:id="@+id/deliver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery"
            android:background="@color/colorPrimaryLight"
            android:paddingLeft="@dimen/buttonpad"
            android:paddingRight="@dimen/buttonpad"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_margin="@dimen/margin_appname_tb"
            android:textColor="@color/white"
            />



        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>